--- a/.aws/buildspec.dev.yaml
+++ b/.aws/buildspec.dev.yaml
@@ -22,7 +22,7 @@ phases:
       - docker push $REPOSITORY_URI:latest
       - docker push $REPOSITORY_URI:$IMAGE_TAG
       - echo Writing image definitions file...
-      - printf $(cat .aws/config.dev.template.json | jq -c) $REPOSITORY_URI:$IMAGE_TAG > config.json
+      - printf $(jq -c . .aws/config.dev.template.json) $REPOSITORY_URI:$IMAGE_TAG > config.json
 artifacts:
     files:
       - config.json
