--- a/.aws/buildspec.prod.yaml
+++ b/.aws/buildspec.prod.yaml
@@ -13,7 +13,7 @@ phases:
     commands:
       - echo Build started on `date`
       - echo Building the Docker image...
-      - docker build -f dibbs.Dockerfile -t $REPOSITORY_URI:latest .
+      - docker build -f dibbs.prod.Dockerfile -t $REPOSITORY_URI:latest .
       - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
   post_build:
     commands:
