disable https for now

--- a/.aws/config.prod.template.json
+++ b/.aws/config.prod.template.json
@@ -7,7 +7,7 @@
         "ParentClientStack1": "DibbsOSClientSG",
         "LoadBalancerPriority": "10",
         "LoadBalancerHostPattern": "vault-appsmith-prod.hovuu.com",
-        "LoadBalancerHttps": "true",
+        "LoadBalancerHttps": "false",
         "Cpu": "1",
         "Memory": "2",
         "AutoScaling": "false",
