prod deploy config

--- a/.aws/appsmith.stack.yaml
+++ b/.aws/appsmith.stack.yaml
@@ -48,6 +48,7 @@ Metadata:
       - ProxyEnvironment2Value
       - ProxyEnvironment3Key
       - ProxyEnvironment3Value
+      - DataFilesystem
       - AppImage
       - AppCommand
       - AppPort
@@ -190,6 +191,10 @@ Parameters:
     Default: ''
   ProxyEnvironment3Value:
     Description: 'Optional environment variable 3 value for proxy container.'
+    Type: String
+    Default: ''
+  DataFilesystem:
+    Description: 'Appsmith data EFS filesystem id.'
     Type: String
     Default: ''
   AppImage:
@@ -596,7 +601,7 @@ Resources:
         - 
           Name: stacks
           EFSVolumeConfiguration: 
-            FilesystemId: fs-07bd9908173118cfc
+            FilesystemId: !Ref DataFilesystem
 
       ContainerDefinitions:
       - !If
