--- a/.aws/config.prod.template.json
+++ b/.aws/config.prod.template.json
@@ -8,6 +8,7 @@
         "LoadBalancerPriority": "10",
         "LoadBalancerHostPattern": "vault-appsmith-prod.hovuu.com",
         "LoadBalancerHttps": "true",
+        "DataFilesystem": "fs-0e656efce33dcad2a",
         "Cpu": "1",
         "Memory": "2",
         "AutoScaling": "false",
