--- a/.aws/buildspec.test.yaml
+++ b/.aws/buildspec.test.yaml
@@ -5,15 +5,15 @@ phases:
     commands:
       - echo Logging in to Amazon ECR...
       - aws --version
-      - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin 810773643803.dkr.ecr.us-east-1.amazonaws.com
-      - REPOSITORY_URI=810773643803.dkr.ecr.us-east-1.amazonaws.com/appsmith
+      - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin 346284258841.dkr.ecr.us-east-1.amazonaws.com
+      - REPOSITORY_URI=346284258841.dkr.ecr.us-east-1.amazonaws.com/appsmith
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
       - IMAGE_TAG=${COMMIT_HASH:=latest}
   build:
     commands:
       - echo Build started on `date`
       - echo Building the Docker image...
-      - docker build -f dibbs.prod.Dockerfile -t $REPOSITORY_URI:latest .
+      - docker build -f dibbs.Dockerfile -t $REPOSITORY_URI:latest .
       - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
   post_build:
     commands:
