--- a/.aws/config.prod.template.json
+++ b/.aws/config.prod.template.json
@@ -5,6 +5,7 @@
         "ParentClusterStack": "DibbsOSCluster",
         "ParentAlertStack": "DibbsOSAlert",
         "ParentClientStack1": "DibbsOSClientSG",
+        "SubnetsReach": "Private",
         "LoadBalancerPriority": "10",
         "LoadBalancerHostPattern": "vault-appsmith-prod.hovuu.com",
         "LoadBalancerHttps": "true",
